--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <!-- Favicon -->
         <link rel="icon" href="library/image/favicon/FAVICON.png" type="image/png">
         <!-- Styles -->
-        <link rel="stylesheet" href="/style/style.css">
-        <script src="/script/script.js"></script>
+        <link rel="stylesheet" href="style/style.css">
+        <script src="script/script.js"></script>
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://michaelyurachek.com/socials/">
